@@ -2,6 +2,12 @@ django-sitemessage changelog
 ============================
 
 
+Unreleased
+----------
+* Message.schedule() now respects message type priority attribute.
+* `SITEMESSAGE_EMAIL_BACKEND_MESSAGES_PRIORITY` now default to None.
+
+
 v0.5.0
 ------
 * IMPORTANT: Package layout changed (messages, messengers locations changed).
